--- a/configs/railways.yml
+++ b/configs/railways.yml
@@ -1,50 +1,7 @@
 url: "https://transit.yahoo.co.jp/traininfo/area/4/"
 filter: true
 lines:
-  - "東京メトロ千代田線"
-  - "小田急江ノ島線"
-  - "江ノ島電鉄線"
   - "山手線"
-  - "京浜東北根岸線"
-  - "湘南新宿ライン"
-  - "東海道本線[東京～熱海]"
-  - "横須賀線"
-  - "中央線(快速)[東京～高尾]"
-  - "中央総武線(各停)"
-  - "宇都宮線[東京～宇都宮]"
-  - "高崎線"
-  - "総武線(快速)[東京～千葉]"
-  - "総武本線[千葉～銚子]"
-  - "京葉線"
-  - "東武東上線"
-  - "東武伊勢崎線[久喜～伊勢崎]"
-  - "西武池袋線"
-  - "西武新宿線"
-  - "西武有楽町線"
-  - "東京メトロ銀座線"
-  - "東京メトロ丸ノ内線"
-  - "東京メトロ日比谷線"
-  - "東京メトロ東西線"
-  - "東京メトロ千代田線"
-  - "東京メトロ有楽町線"
-  - "東京メトロ半蔵門線"
-  - "東京メトロ南北線"
-  - "東京メトロ副都心線"
-  - "京王線"
-  - "京王井の頭線"
-  - "東急東横線"
-  - "東急目黒線"
-  - "東急田園都市線"
-  - "東急大井町線"
-  - "東急多摩川線"
-  - "東急池上線"
-  - "東急世田谷線"
-  - "都営浅草線"
+  - "埼京川越線[大崎～川越]"
   - "都営三田線"
-  - "都営新宿線"
   - "都営大江戸線"
-  - "都電荒川線"
-  - "日暮里・舎人ライナー"
-  - "小田急小田原線"
-  - "つくばエクスプレス線"
-  - "東京モノレール線"
